--- a/index.html
+++ b/index.html
@@ -105,17 +105,18 @@
 
     <!-- ===================================================POPUP_WINDOW -->
     
-    <div id="previewcon" class="preview_container">
-        <!-- <div class="previewbox active" data-target='f_01'>
+    <div id="previewContainer" class="preview_container">
+        <div class="previewbox active" data-target='f_01'>
             <div class="preview">
-                <img src="image/#.jpg">
+                <img src="image/프리지아_01.jpg">
                 <div class="closebutton">close</div>
             </div>
             <br>
-            <h3>ABCDEFG</h3>
-            <div class="flowername"></div>
-            <div class="description"></div>
-        </div> -->
+            <h2>ABCDEFG</h2>
+            <p class="flowersummary">이쁜 꽃 입니다</p>
+            <br>
+            <p class="description">봄 철에 향긋한 향기를 뿜어내는 프리지아. '너의 새로운 시작을 축하해' 라는 꽃말을 가지고 있어요!</p>
+        </div>
     </div>
 
 
